--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="container">
                 <div class="section-popular-travel row justify-content-center">
                     <div class="col-sm-6 col-md-4 col-lg-3">
-                        <div class="card-travel text-center d-flex flex-column" style="background-image: url('frontend/images/city1.jpg');">
+                        <div class="card-travel text-center d-flex flex-column" style="background-image: url('frontend/Images/city1.jpg');">
                             <div class="travel-button mt-auto">
                                 <a href="#" class="btn btn-travel-details">
                                     What a Life City
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4 col-lg-3">
-                        <div class="card-travel text-center d-flex flex-column" style="background-image: url('frontend/images/city2.jpg');">
+                        <div class="card-travel text-center d-flex flex-column" style="background-image: url('frontend/Images/city2.jpg');">
                             <div class="travel-button mt-auto">
                                 <a href="Candy-City-Detail-Page.html" class="btn btn-travel-details">
                                     Candy City
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4 col-lg-3">
-                        <div class="card-travel text-center d-flex flex-column" style="background-image: url('frontend/images/city3.jpg');">
+                        <div class="card-travel text-center d-flex flex-column" style="background-image: url('frontend/Images/city3.jpg');">
                             <div class="travel-button mt-auto">
                                 <a href="#" class="btn btn-travel-details">
                                     Power City
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4 col-lg-3">
-                        <div class="card-travel text-center d-flex flex-column" style="background-image: url('frontend/images/city4.jpg');">
+                        <div class="card-travel text-center d-flex flex-column" style="background-image: url('frontend/Images/city4.jpg');">
                             <div class="travel-button mt-auto">
                                 <a href="#" class="btn btn-travel-details">
                                     Sing For U City
@@ -389,3 +389,4 @@
     <script src="frontend/Library/Bootstrap/js/bootstrap.js"></script>
 </body>
 </html>
+
